re PR middle-end/25568 (RTL checking bootstrap failure on i686-unknown-linux-gnu)

PR middle-end/25568
       * combine.c (simplify_shift_const_1 <case PLUS>):Fix enable-checking
       rtl bootstrap failure.

From-SVN: r109064